# ECSTest

./: .gitignore  CMakeLists.txt  ECSTest.sln
.github/workflows/: continuous_integration.yml
ECSTest/: ECSTest.vcxproj  ECSTest.vcxproj.filters
ECSTest/include/Core/Actor/: Actor.h  Bot.h  Drone.h
ECSTest/include/Core/Statuses/: ArcingCurrent.h  BaseStatus.h  Burn.h  Crit.h  Irradiation.h  Swarm.h
ECSTest/include/ECS/Systems/: ArcingCurrentSystem.h  BaseStatusSystem.h  BaseSystem.h  BurnSystem.h  CritSystem.h  IrradiationSystem.h  ShatterSystem.h  StatusHolder.h  SwarmSystem.h
ECSTest/source/: Main.cpp
ECSTest/source/Core/Actor/: Actor.cpp  Bot.cpp  Drone.cpp
ECSTest/source/Core/Statuses/: ArcingCurrent.cpp  BaseStatus.cpp  Burn.cpp  Crit.cpp  Irradiation.cpp  Shatter.cpp  Swarm.cpp
ECSTest/source/ECS/: ECSTest.cpp
ECSTest/source/Inheritance/: InheritanceTest.cpp
